🐛 Fixed Input overflow issue

--- a/src/framework/components/inputs/input/input.scss
+++ b/src/framework/components/inputs/input/input.scss
@@ -83,6 +83,7 @@
     }
 
     input-container {
+        overflow: hidden;
         display: flex;
         flex-flow: row nowrap;
         width: 100%;
